--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,12 +37,26 @@
   }
 }
 
-.navBar {
-  display: flex;
+.navItems {
+  background-color: black;
+  color: white;
+  display: grid;
+  grid-template-columns: 1fr 15fr 1fr 1fr;
+  align-items: center;
+  padding: 3px;
+}
+
+.mainTitle {
+  font-size: 30px;
 }
 
 .navLinks {
   text-decoration: none;
+  color: white;
+  padding: 0;
+  margin: 0;
+  width: 100px;
+  font-weight: bold;
 }
 
 .theme-btns {
@@ -53,5 +67,60 @@
   margin: 5px;
   text-align: center;
   font-size: 14px;
-  width: 100px;
+  font-weight: bold;
+  width: 250px;
+}
+
+.formLabel{
+  font-weight: bold;
+}
+
+.deleteDropdown{
+  background-color: white;
+}
+
+.homeBtn {
+  margin: 2px;
+}
+
+.phraseWrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.themesContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgray;
+  width: 600px;
+  height: auto;
+  padding: 15px 20px;
+  margin: 5px;
+}
+
+.topWord {
+  font-weight: bold;
+}
+
+.allPhrases {
+  background-color: lightgray;
+}
+
+.phraseGrid {
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr;
+  justify-items: left;
+  padding-left: 100px;
+}
+
+.updateLabel {
+  font-weight: bold;
+}
+
+.updateDropdown {
+  background-color: white;
 }
